# f1pitwall-rs

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  demo.tape
.github/: CODEOWNERS
.github/workflows/: ci.yml  homebrew_release.yml  release.yml
crates/f1core/: Cargo.toml
crates/f1core/src/: auth.rs  buffer.rs  clock.rs  display.rs  lib.rs  location.rs  mqtt.rs  polling.rs  session_data.rs  telemetry.rs  toast.rs
crates/f1core/src/api/: mod.rs  models.rs
crates/f1core/src/db/: mod.rs  models.rs  queries.rs  schema.rs  upserts.rs
crates/f1core/src/domain/: alert.rs  battle.rs  degradation.rs  ml.rs  ml_features.rs  mod.rs  pm_score.rs  position.rs  rules.rs  sector.rs  strategy.rs  track.rs
crates/f1core/src/session_types/: mod.rs  practice.rs  qualifying.rs  race.rs
crates/f1core/src/util/: time.rs
crates/pw/: Cargo.toml
crates/pw/src/: bootstrap.rs  main.rs  update.rs
crates/pw/src/app/: mod.rs
crates/pw/src/pages/: input.rs  login.rs  mod.rs  picker.rs  session.rs
crates/pw/src/session_types/: mod.rs
crates/pw/src/ui/: board.rs  login.rs  mod.rs  picker.rs  race_control.rs  style.rs  telemetry.rs  track_map.rs  weather.rs
data/: compound_allocations.json  evaluate_model.py
data/models/: pit_window_q25.onnx  pit_window_q50.onnx  pit_window_q75.onnx
data/tracks/: albert_park.json  austin.json  bahrain.json  baku.json  barcelona.json  hungaroring.json  imola.json  interlagos.json  jeddah.json  las_vegas.json  lusail.json  marina_bay.json  mexico.json  miami.json  monaco.json  montreal.json  monza.json  shanghai.json  silverstone.json  spa.json  spielberg.json  suzuka.json  yas_marina.json  zandvoort.json
scripts/: fetch-tracks.mjs  update-track-records.mjs
