[workspace]
members = ["crates/f1core", "crates/pw"]
resolver = "3"

[workspace.package]
version = "0.34.1"
edition = "2024"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ts-rs = { version = "12", features = ["serde-compat"] }
tracing = "0.1"
