[package]
name = "pw"
version.workspace = true
edition.workspace = true

[dependencies]
f1core = { path = "../f1core" }
ratatui = "0.29"
crossterm = "0.28"
tokio.workspace = true
reqwest.workspace = true
serde_json.workspace = true
chrono.workspace = true
anyhow.workspace = true
clap = { version = "4", features = ["derive", "env"] }
self_update = { version = "0.42", default-features = false, features = ["rustls", "archive-tar", "archive-zip", "compression-flate2", "compression-zip-deflate"] }
